--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>My javaScript Practises</title>
 </head>
 <body>
-    
+
+    <section id="projects"></section>
+    <script src="./js/index.js" async defer></script>
 </body>
 </html>
