Filled index with some layout content

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>My javaScript Practises</title>
 </head>
 <body>
+    <header><h1 id="top">Mrdarip's JS practices</h1></header>
 
-    <section id="projects"></section>
+    <main>
+        <section id="projects">
+            <h2>Projects</h2>
+            <hr />
+        </section>
+    </main>
+
+    <footer><a href="#top">Go to top</a></footer>
+    
     <script src="./js/index.js" async defer></script>
 </body>
 </html>
