--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My javaScript Practises</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header><h1 id="top">Mrdarip's JS practices</h1></header>
 
     <main>
+        <h2>Projects</h2>
+        <hr />
         <section id="projects">
-            <h2>Projects</h2>
-            <hr />
         </section>
     </main>
 
