improved text ortography

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My javaScript Practises</title>
+    <title>My JavaScript Practices</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header><h1 id="top">Mrdarip's JS practices</h1></header>
+    <header><h1 id="top">Mrdarip's JavaScript practices</h1></header>
 
     <main>
         <h2>Projects</h2>
