created basic layout

--- a/projects/Whack-A-Mole/index.html
+++ b/projects/Whack-A-Mole/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Whack-A-Mole 🐀</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <header><h1>Whack-A-Mole game!</h1></header>
+    <main>🐀🦡🐁🕳🥔</main>
+    <script src="./game.js"></script>
+  </body>
 </html>
