--- a/projects/Whack-A-Mole/index.html
+++ b/projects/Whack-A-Mole/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header><h1>Whack-A-Mole game!</h1></header>
-    <main>🐀🦡🐁🕳🥔</main>
+    <main></main>
     <script src="./game.js"></script>
   </body>
 </html>
