implemented points in the Whack-A-Mole game

--- a/projects/Whack-A-Mole/index.html
+++ b/projects/Whack-A-Mole/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header><h1>Whack-A-Mole game!</h1></header>
+    <header><h1>Whack-A-Mole game!</h1>
+    <p>points: <span id="points">0</span></p></header>
     <main></main>
     <script src="./game.js"></script>
   </body>
