implemented jokes script

--- a/projects/Jokes/index.html
+++ b/projects/Jokes/index.html
@@ -11,10 +11,12 @@
       <h1>Jokes 🃏</h1>
     </header>
     <main>
-      <section id="setup">joke</section>
-      <section id="skip">skip</section>
-      <section id="show">show</section>
-      <section id="delivery">punchline</section>
+      <section id="setup"></section>
+      <section id="skip"></section>
+      <section id="show"></section>
+      <section id="delivery"></section>
     </main>
+
+    <script src="./script.js"></script>
   </body>
 </html>
