simplified jokes button to just one

--- a/projects/Jokes/index.html
+++ b/projects/Jokes/index.html
@@ -12,8 +12,7 @@
     </header>
     <main>
       <section id="setup"></section>
-      <section id="skip"></section>
-      <section id="show"></section>
+      <section id="next"></section>
       <section id="delivery"></section>
     </main>
 
