--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My JavaScript Practices</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <header><h1 id="top">Mrdarip's JavaScript practices</h1></header>
 
     <main>
+      <section>
         <h2>Projects</h2>
+        <label for="order">Order: </label>
+        <select name="order" id="order">
+          <option value="AZ">A-Z</option>
+          <option value="ZA">Z-A</option>
+          <option value="dateAsc">Date ⬆</option>
+          <option value="dateDesc">Date ⬇</option>
+        </select>
         <hr />
-        <section id="projects">
-        </section>
+      </section>
+      
+      <section id="projects"></section>
     </main>
 
     <footer><a href="#top">Go to top</a></footer>
-    
+
     <script src="./js/index.js" async defer></script>
-</body>
+  </body>
 </html>
