--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h2>Projects</h2>
         <label for="order">Order: </label>
         <select name="order" id="order">
+          <option value="newest">newest</option>
+          <option value="oldest">oldest</option>
           <option value="AZ">A-Z</option>
           <option value="ZA">Z-A</option>
-          <option value="dateAsc">Date ⬆</option>
-          <option value="dateDesc">Date ⬇</option>
         </select>
         <hr />
       </section>
