--- a/projects/WhosThatPokemon/index.html
+++ b/projects/WhosThatPokemon/index.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Who's That Pokémon?</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>Who's That Pokémon?</h1>
-    <p>
-      Can you guess who's that Pokémon? Click on the image to reveal the answer.
-    </p>
-    <img
-      id="pokemonImage"
-      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/777.png"
-      alt="Who's that Pokémon?"
-      onclick="this.style.filter = 'brightness(0%)';"
-    />
-    <p id="pokemonName"></p>
-
-    <script src="./script.js" async defer></script>
+    <section>
+      <img
+        id="pokemonImage"
+      />
+      <input type="text" id="pokemonInput" placeholder="Enter a Pokémon name" />
+      <p id="pokemonName"></p>
+    </section>
+    <script src="./script.js"></script>
   </body>
 </html>
