styled whos that pokemon and implemented showing its name when surrending

--- a/projects/WhosThatPokemon/index.html
+++ b/projects/WhosThatPokemon/index.html
@@ -8,12 +8,11 @@
   </head>
   <body>
     <h1>Who's That Pokémon?</h1>
+    <p>Enter a Pokémon name or click on the silhouette to reveal the Pokémon!</p>
     <section>
-      <img
-        id="pokemonImage"
-      />
-      <input type="text" id="pokemonInput" placeholder="Enter a Pokémon name" />
+      <img id="pokemonImage" />
       <p id="pokemonName"></p>
+      <input type="text" id="pokemonInput" placeholder="Enter a Pokémon name" />
     </section>
     <script src="./script.js"></script>
   </body>
