implemented displaying the number of pokemons left

--- a/projects/WhosThatPokemon/index.html
+++ b/projects/WhosThatPokemon/index.html
@@ -9,10 +9,13 @@
   <body>
     <h1>Who's That Pokémon?</h1>
     <p>Enter a Pokémon name or click on the silhouette to reveal the Pokémon!</p>
-    <section>
+    <section id = "finding">
       <img id="pokemonImage" />
       <p id="pokemonName"></p>
       <input type="text" id="pokemonInput" placeholder="Enter a Pokémon name" />
+    </section>
+    <section id="found">
+      <h2>There's <span id="left"></span> left!</h2>
     </section>
     <script src="./script.js"></script>
   </body>
