implemented showing found pokemons

--- a/projects/WhosThatPokemon/index.html
+++ b/projects/WhosThatPokemon/index.html
@@ -14,8 +14,9 @@
       <p id="pokemonName"></p>
       <input type="text" id="pokemonInput" placeholder="Enter a Pokémon name" />
     </section>
-    <section id="found">
+    <section>
       <h2>There's <span id="left"></span> left!</h2>
+      <article id="found"></article>
     </section>
     <script src="./script.js"></script>
   </body>
