implemented input and displaying it changes

--- a/projects/TypingFX/index.html
+++ b/projects/TypingFX/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    
+    <main><input type="text" name="myInput" id="myInput"></main>
     <script src="./script.js"></script>
   </body>
 </html>
