--- a/projects/TypingFX/index.html
+++ b/projects/TypingFX/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <main><input type="text" name="myInput" id="myInput"></main>
+    <main>
+      <input type="text" name="myInput" id="myInput" />
+      <input type="text" name="myInput2" id="myInput2" />
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
