fully styled typefx page with a retro-core style

--- a/projects/TypingFX/index.html
+++ b/projects/TypingFX/index.html
@@ -8,8 +8,13 @@
   </head>
   <body>
     <main>
-      <input type="text" name="myInput" id="myInput" />
-      <input type="text" name="myInput2" id="myInput2" />
+      <h1>Login for the full experience</h1>
+      <label for="myInput">User:</label>
+      <input type="text" name="myInput" id="myInput" placeholder="Name"/>
+      <label for="myInput2">Email:</label>
+      <input type="email" name="myInput2" id="myInput2" placeholder="example@domain.com"/>
+      <hr>
+      <button type="submit" onclick='window.open("https://www.zombo.com")'>Login</button>
     </main>
     <script src="./script.js"></script>
   </body>
