implemented sending user to viewPresentation.html

--- a/projects/HtmlPresentation/index.html
+++ b/projects/HtmlPresentation/index.html
@@ -8,5 +8,7 @@
 <body>
     Provide your presentation URL here:
     <input type="text" id="presentationUrl" value="###">
+    <button onclick="loadPresentation()">Load</button>
+    <script src="./js/presentationLoader.js"></script>
 </body>
 </html>
