implemented sample presentation as default presentation url

--- a/projects/HtmlPresentation/index.html
+++ b/projects/HtmlPresentation/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     Provide your presentation URL here:
-    <input type="text" id="presentationUrl" value="###">
+    <input type="text" id="presentationUrl" value="https://mrdarip.github.io/practising-js/projects/HtmlPresentation/data/sampleData/samplePresentation.json">
     <button onclick="loadPresentation()">Load</button>
     <script src="./js/presentationLoader.js"></script>
 </body>
