implemented setting slide and html for later full navigation implementation

--- a/projects/HtmlPresentation/html/viewPresentation.html
+++ b/projects/HtmlPresentation/html/viewPresentation.html
@@ -6,7 +6,11 @@
     <title>Load</title>
 </head>
 <body>
-    hello world
+    <h1 id="slideTitle"></h1>
+    <div id="slideContent"></div>
+    <div id="slideImage"></div>
+    <button id="prevButton" onclick="prevSlide()">Previous</button>
+    <button id="nextButton" onclick="nextSlide()">Next</button>
 
     <script src="../js/presentationViewer.js"></script>
 </body>
