implemented displaying current slide in new html layout

--- a/projects/HtmlPresentation/html/viewPresentation.html
+++ b/projects/HtmlPresentation/html/viewPresentation.html
@@ -8,7 +8,7 @@
 <body>
     <h1 id="slideTitle"></h1>
     <div id="slideContent"></div>
-    <div id="slideImage"></div>
+    <img id="slideImage"></img>
     <button id="prevButton" onclick="prevSlide()">Previous</button>
     <button id="nextButton" onclick="nextSlide()">Next</button>
 
