implemented seeing previous and next slide

--- a/projects/HtmlPresentation/html/viewPresentation.html
+++ b/projects/HtmlPresentation/html/viewPresentation.html
@@ -9,7 +9,7 @@
     <h1 id="slideTitle"></h1>
     <div id="slideContent"></div>
     <img id="slideImage"></img>
-    <button id="prevButton" onclick="prevSlide()">Previous</button>
+    <button id="prevButton" onclick="previousSlide()">Previous</button>
     <button id="nextButton" onclick="nextSlide()">Next</button>
 
     <script src="../js/presentationViewer.js"></script>
