implemented changing slide layout by adding classes

--- a/projects/HtmlPresentation/html/viewPresentation.html
+++ b/projects/HtmlPresentation/html/viewPresentation.html
@@ -6,12 +6,13 @@
     <title>Load</title>
 </head>
 <body>
+    <main id="slideSurface">
     <h1 id="slideTitle"></h1>
     <div id="slideContent"></div>
     <img id="slideImage"></img>
     <button id="prevButton" onclick="previousSlide()">Previous</button>
     <button id="nextButton" onclick="nextSlide()">Next</button>
-
+    </main>
     <script src="../js/presentationViewer.js"></script>
 </body>
 </html>
