--- a/projects/HtmlPresentation/html/viewPresentation.html
+++ b/projects/HtmlPresentation/html/viewPresentation.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Load</title>
+    <link rel="stylesheet" href="../css/slideStyles.css">
 </head>
 <body>
     <main id="slideSurface">
