--- a/projects/HtmlPresentation/html/viewPresentation.html
+++ b/projects/HtmlPresentation/html/viewPresentation.html
@@ -11,8 +11,8 @@
     <h1 id="slideTitle"></h1>
     <div id="slideContent"></div>
     <img id="slideImage"></img>
-    <button id="prevButton" onclick="previousSlide()">Previous</button>
-    <button id="nextButton" onclick="nextSlide()">Next</button>
+    <button id="prevButton">Previous</button>
+    <button id="nextButton">Next</button>
     </main>
     <script src="../js/presentationViewer.js"></script>
 </body>
