styled presentation url input page

--- a/projects/HtmlPresentation/index.html
+++ b/projects/HtmlPresentation/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Load your presentation</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    Provide your presentation URL here:
+    <h1>Provide your presentation URL here:</h1>
     <input type="text" id="presentationUrl" value="https://mrdarip.github.io/practising-js/projects/HtmlPresentation/data/sampleData/samplePresentation.json">
     <button onclick="loadPresentation()">Load</button>
     <script src="./js/presentationLoader.js"></script>
